deleted the .html at end of hrefs for cleaner url and got login page to reference creds in db and send user to crud page

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="../blog.html">
+            <a class="navbar-brand" href="../blog">
                 <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
             </a>
 
@@ -48,7 +48,6 @@
         <div class="user-action">
             <!--this will be where content shows to CRUD-->
         </div>
-
     </div>
     <footer>
         <div class="footer-container">
@@ -58,11 +57,11 @@
             </div>
             <div class="footerNav">
                 <ul>
-                    <li><a href="../about.html"> About </a></li>
-                    <li><a href="../blog.html"> Blog </a></li>
-                    <li><a href="../resources.html"> Resources </a></li>
-                    <li><a href="../contact.html"> Contact </a></li>
-                    <li><a href="../teambio.html"> Our Team</a></li>
+                    <li><a href="../about"> About </a></li>
+                    <li><a href="../blog"> Blog </a></li>
+                    <li><a href="../resources"> Resources </a></li>
+                    <li><a href="../contact"> Contact </a></li>
+                    <li><a href="../teambio"> Our Team</a></li>
                 </ul>
             </div>
         </div>
