--- a/public/html/login.html
+++ b/public/html/login.html
@@ -14,23 +14,23 @@
     <nav class="navbar bg-body-tertiary">
     <div class="container">
       <a class="navbar-brand" href="#">
-      <a href="../blog.html">
+      <a href="../blog">
         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
      </a>
       
         <div class="wrapper"> 
-        <form action="..\crud.html">
+        <form action="..\crud">
          <h1>login</h1>
          <div class="input-box">
           
 
         </div>
             <div class="input-box">
-                <input type="text" placeholder="Username" required>
+                <input id="email-login" type="email" placeholder="Email" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-                <input type="password" placeholder="password" required>
+                <input id="passwordLogin" type="password" placeholder="Password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
