--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE>
+ lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -20,17 +20,17 @@
 <body>
   <nav class="navbar bg-body-tertiary">
     <div class="container">
-      <a class="navbar-brand" href="../blog.html">
+      <a class="navbar-brand" href="../blog">
         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
       </a>
 
       <ul class="nav-links">
-        <li><a href="../html/blog.html"> Blog </a></li>
-        <li><a href="../html/about.html"> About </a></li>
-        <li><a href="../html/crud.html"> POST </a></li>
-        <li><a href="../html/resources.html"> Resources </a></li>
-        <li><a href="../html/contact.html"> Contact </a></li>
-        <li><a href="../html/login.html"> Logout </a></li>
+        <li><a href="../blog"> Blog </a></li>
+        <li><a href="../about"> About </a></li>
+        <li><a href="../crud"> POST </a></li>
+        <li><a href="../resources"> Resources </a></li>
+        <li><a href="../contact"> Contact </a></li>
+        <li><a href="../login"> Logout </a></li>
       </ul>
 
       <div class="profile-img">
@@ -55,11 +55,11 @@
       </div>
       <div class="footerNav">
         <ul>
-          <li><a href="../about.html"> About </a></li>
-          <li><a href="../blog.html"> Blog </a></li>
-          <li><a href="../resources.html"> Resources </a></li>
-          <li><a href="../contact.html"> Contact us </a></li>
-          <li><a href="../teambio.html"> Our Team</a></li>
+          <li><a href="../about"> About </a></li>
+          <li><a href="../blog"> Blog </a></li>
+          <li><a href="../resources"> Resources </a></li>
+          <li><a href="../contact"> Contact us </a></li>
+          <li><a href="../teambio"> Our Team</a></li>
         </ul>
       </div>
     </div>
@@ -70,4 +70,4 @@
   </footer>
 </body>
 
-</html>
+<>
