--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -82,7 +82,7 @@
     <div class="card" style="width: 18rem;">
       <img src="../images/pre-post3.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">JavaScript</h5>
+        <h5 class="card-title">Ucf bootcamp</h5>
         <div class="profile-img">
           <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
         </div>
@@ -101,7 +101,7 @@
     <div class="card" style="width: 18rem;">
       <img src="../images/pre-post2.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">JavaScript</h5>
+        <h5 class="card-title">Mysql</h5>
         <div class="profile-img">
           <img src="../images/pre-profile-pic2.jpeg" alt="profile-pic" width="40" height="40">
         </div>
@@ -125,7 +125,18 @@
           <!--post title and text will load here-->
         </div>
         <img id="modalProfilePic" src="" alt="" width="40" height="40">
-        <button id="close">Close</button>
+        <br>
+        <div class="comment-section">
+          <div class="like-comment-section">
+          <p><i class="bi bi-hand-thumbs-up"></i> Like</p>
+          <p><i class="bi bi-chat-dots"></i> Comment</p>
+          </div>
+        <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+        </div>
+        <div class="modal-button">
+          <button class="modal-comment-button" id="comment">Post comment</button>
+        <button class="modal-close-button" id="close">Cancel</button>
+        </div>
       </div>
     </div>
   </div>
