--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -1,5 +1,5 @@
-<!DOCTYPE>
- lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <link rel="icon" type="image/x-icon" href="/public/images/favicon1.png">
   <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
   <link rel="stylesheet" type="text/css" href="../css/stanley.css" />
@@ -41,11 +42,14 @@
   </nav>
   <br>
 
-  <div class="contact-section">
+  <div class="cohortVideos">
     <h1>Stanley's Previous Cohort Videos</h1>
     <p>Previously recorded video content related to MERN stack learning!</p>
-
   </div>
+
+
+
+
 
   <footer>
     <div class="footer-container">
@@ -68,6 +72,9 @@
           alt="F2F fist to five logo" width="30" height="30"></p>
     </div>
   </footer>
-</body>
 
-<>
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+
+</body>
+</html>
