almost have crud profile get request working

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -123,6 +123,7 @@
                     src="../images/favicon1.png" alt="F2F fist to five logo" width="30" height="30"></p>
         </div>
     </footer>
+    <script src="../js/crud.js"></script>
 </body>
 
 </html>
