error with route, needs checking to create new data

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -60,7 +60,7 @@
   </div>
   <br>
 
-  <div class="blog-post-area">
+  <div class="blog-post-area" id="blog-post-area">
     <!--template for blog card post below-->
     <div class="card" style="width: 18rem;">
       <img src="../images/pre-post1.jpg" class="card-img-top" alt="...">
@@ -115,6 +115,7 @@
 
       </div>
     </div>
+    
     <!--End of pre-BLOGS-->
 
     <!--Modal pop up when user click on blog posts-->
