updated team-bio with katie img/text - centered on page

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -59,10 +59,8 @@
       </div>
       <div class="developer-position">
         <div class="flex-container">
-          <img class="about-developers" src="../images/about-katie.png" alt="a picture of Abigail">
-          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
-            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
-            diam, quis fringilla eros faucibus et."</p>
+          <img class="about-developers" src="../images/about-katie.jpg" alt="a picture of Katie">
+          <p>"An aspiring Full Stack Web Developer with a strong passion for health, fitness, and Yoga.  "</p>
         </div>
       </div>
       <div class="developer-position">
