updating katie bio

--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -60,7 +60,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-katie.jpg" alt="a picture of Katie">
-          <p>"An aspiring Full Stack Web Developer with a strong passion for health, fitness, and Yoga.  "</p>
+          <p>"An aspiring Full Stack Web Developer with a love for health, fitness, yoga, travel, and music.  "</p>
         </div>
       </div>
       <div class="developer-position">
