added search box for resources

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -49,6 +49,18 @@
       <p>Valuable resources for programming <b>help</b> and <b>knowledge</b>!</p>
     </div>
 
+
+    <div class="searchInLine">
+    <div class="searchFor">
+      <h3>Search by Tag Name or select below</h3>
+    </div>
+
+     <div class="search-bar">
+      <input type="text" id="tagSearchInput" placeholder="Search by Tag Name">
+      <button id="tagSearchButton">Search</button>
+    </div>
+  </div>
+
     <!-- Tag Buttons at Top -->
     <div class="tag-buttons">
       <button class="btn btn-primary tag-button" data-tag="all">All</button>
