updated nav bar to match

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -29,7 +29,7 @@
         <li><a href="../about"> About </a></li>
         <li><a href="../crud"> POST </a></li>
         <li><a href="../resources"> Resources </a></li>
-        <li><a href="../contact"> Contact </a></li>
+        <li><a href="../contact"> Contact us</a></li>
         <li><a href="../login"> Logout </a></li>
       </ul>
 
