updated search bar to be fixed to top of page when scrolling

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -50,6 +50,8 @@
     </div>
 
 
+    <div class="searchFixed">
+
     <div class="searchInLine">
     <div class="searchFor">
       <h3>Search by Tag Name or select below</h3>
@@ -63,18 +65,18 @@
 
     <!-- Tag Buttons at Top -->
     <div class="tag-buttons">
-      <button class="btn btn-primary tag-button" data-tag="all">All</button>
-      <button class="btn btn-primary tag-button" data-tag="html">HTML</button>
-      <button class="btn btn-primary tag-button" data-tag="css">CSS</button>
-      <button class="btn btn-primary tag-button" data-tag="javascript">JavaScript</button>
-      <button class="btn btn-primary tag-button" data-tag="python">Python</button>
-      <button class="btn btn-primary tag-button" data-tag="c and c++">C and C++</button>
-      <button class="btn btn-primary tag-button" data-tag="c#">C#</button>
-      <button class="btn btn-primary tag-button" data-tag="java">JAVA</button>
+      <button class="btn btn-info tag-button" data-tag="all">All</button>
+      <button class="btn btn-info tag-button" data-tag="html">HTML</button>
+      <button class="btn btn-info tag-button" data-tag="css">CSS</button>
+      <button class="btn btn-info tag-button" data-tag="javascript">JavaScript</button>
+      <button class="btn btn-info tag-button" data-tag="python">Python</button>
+      <button class="btn btn-info tag-button" data-tag="c and c++">C and C++</button>
+      <button class="btn btn-info tag-button" data-tag="c#">C#</button>
+      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
 
       
     </div>
-
+</div>
 
     
 
