--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -54,7 +54,7 @@
 
     <div class="searchInLine">
     <div class="searchFor">
-      <h3>Search by Tag Name or select below</h3>
+      <h3>Search by #Tag Name</h3>
     </div>
 
      <div class="search-bar">
