posts are going through and page is reloaded to immediatly show the changes

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -65,7 +65,7 @@
 
     </div>
 
-    <table class="table table-light table-striped table-hover" hidden="hidden">
+    <table class="table table-light table-striped table-hover">
       <thead>
         <tr>
           <th scope="col">Date Created</th>
