--- a/public/html/login.html
+++ b/public/html/login.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../css/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="/public/images/favicon1.png">
+    <link rel="background" href="public/images/img.jpg">
 </head>
 
 <body> 
+    
     <nav class="navbar bg-body-tertiary">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -18,8 +20,8 @@
         <img src="../images/F2F BLOG Logo.png" alt="F2F fist to five logo" width="150" height="50">
      </a>
       
-        <div class="wrapper"> 
-        <form action="public\html\crud.html">
+    <div class="wrapper"> 
+        <form action="/public/html/blog.html">
          <h1>login</h1>
          <div class="input-box">
          <input type="text" placeholder="Username" 
