--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -58,7 +58,7 @@
     </div>
 
      <div class="search-bar">
-      <input type="text" id="tagSearchInput" placeholder="Search by Tag Name">
+      <input type="text" id="tagSearchInput" placeholder="Search by #Tag Name">
       <button id="tagSearchButton">Search</button>
     </div>
   </div>
