updated resources page to function

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -85,9 +85,13 @@
 </div>
 <br/>
 
+<div class="titleButton">
 <div class="resources-app">
   <h1>Resources</h1>
   <p>Valuable resources for programming <b>help</b> and <b>knowledge</b>!</p>
+</div>
+
+<a class="Sbtn btn-info tag-button" href="../html/stanley.html">Big Winner!</a>
 </div>
 
 
