--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -85,14 +85,17 @@
 </div>
 <br/>
 
-<div class="titleButton">
+<!-- <div class="titleButton"> -->
 <div class="resources-app">
   <h1>Resources</h1>
   <p>Valuable resources for programming <b>help</b> and <b>knowledge</b>!</p>
 </div>
 
-<a class="Sbtn btn-info tag-button" href="../html/stanley.html">Big Winner!</a>
+<div class="Sbtn">
+<a class="btn btn-info tag-button" href="../html/stanley.html">Big Winner!</a>
 </div>
+<!-- </div> -->
+
 
 
     <div class="formTitle">
