add changes to html, javascript and template

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -18,7 +18,8 @@
   <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
   <link rel="stylesheet" type="text/css" href="../css/blog.css" />
   <script async src="../js/youtube.js"></script>
-  <script defer src="../js/blog.js"></script>
+  <script defer type="module" src="../js/blog.js"></script>
+ 
 
 </head>
 
