delete pre set values in table, when user enters crud page it should load the user who logged in their post histroy

--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -79,26 +79,26 @@
       </thead>
       <tbody id="userPostTable">
         
-          <th scope="row">10 October, 2023</th>  
-          <td>JavaScript</td>
-          <td>I feel like we are missing the script tag in our HTML.</td>
+          <th scope="row"></th>  
+          <td></td>
+          <td></td>
           <td>
             <i class="bi bi-pencil-square edit-post"></i>
             <i class="bi bi-trash3-fill delete-post"></i>
           </td>
         </tr> 
-          <th scope="row">1 October, 2023</th>
-          <td>Ucf bootcamp</td>
-          <td>Is bootcamp worth it? Enrolling Now UCF ONLINE Coding, Register now!</td>
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
           <td>
             <i class="bi bi-pencil-square edit-post"></i>
             <i class="bi bi-trash3-fill delete-post"></i>
           </td>
         </tr> 
       <tr data-post-id="3"> 
-          <th scope="row">5 September, 2023</th>
-          <td>Mysql</td>
-          <td>I thought this would help anyone learning MYSQL and building their own database/api's!</td>
+          <th scope="row"></th>
+          <td></td>
+          <td></td>
           <td>
             <i class="bi bi-pencil-square edit-post"></i>
             <i class="bi bi-trash3-fill delete-post"></i>
