--- a/public/html/crud.html
+++ b/public/html/crud.html
@@ -79,31 +79,7 @@
       </thead>
       <tbody id="userPostTable">
         
-          <th scope="row"></th>  
-          <td></td>
-          <td></td>
-          <td>
-            <i class="bi bi-pencil-square edit-post"></i>
-            <i class="bi bi-trash3-fill delete-post"></i>
-          </td>
-        </tr> 
-          <th scope="row"></th>
-          <td></td>
-          <td></td>
-          <td>
-            <i class="bi bi-pencil-square edit-post"></i>
-            <i class="bi bi-trash3-fill delete-post"></i>
-          </td>
-        </tr> 
-      <tr data-post-id="3"> 
-          <th scope="row"></th>
-          <td></td>
-          <td></td>
-          <td>
-            <i class="bi bi-pencil-square edit-post"></i>
-            <i class="bi bi-trash3-fill delete-post"></i>
-          </td>
-        </tr> 
+          <!--shows in javascript -->
 
       </tbody>
     </table>
