--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -68,7 +68,7 @@
       <div class="card-body">
         <h5 class="card-title">JavaScript</h5>
         <div class="profile-img">
-          <img src="../images/pre-profile-pic1.jpg" alt="profile-pic" width="40" height="40">
+          <img src="../images/pre-profile-pic1.jpg" class="profile-pic-match" alt="profile-pic" width="40" height="40">
         </div>
         <div class="date-created">
           <p><i>John Doe posted</i> 5 September, 2023</p>
@@ -85,7 +85,7 @@
       <div class="card-body">
         <h5 class="card-title">Ucf bootcamp</h5>
         <div class="profile-img">
-          <img src="../images/Profile-pic.jpg" alt="profile-pic" width="40" height="40">
+          <img src="../images/pre-profile-pic2.jpeg" class="profile-pic-match" alt="profile-pic" width="40" height="40">
         </div>
         <div class="date-created">
           <p><i>Jane Doe posted</i> 10 October, 2023</p>
@@ -104,24 +104,21 @@
       <div class="card-body">
         <h5 class="card-title">Mysql</h5>
         <div class="profile-img">
-          <img src="../images/pre-profile-pic2.jpeg" alt="profile-pic" width="40" height="40">
+          <img src="../images/Profile-pic.jpg" class="profile-pic-match" alt="profile-pic" width="40" height="40">
         </div>
         <div class="date-created">
           <p><i>Jack Doe posted</i> 1 October, 2023</p>
-          <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"
-          </p>
-
-          <a href="#" class="btn btn-primary">See post</a>
+          <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"</p>
+          <a href="#" class="btn btn-primary modalSeePost">See post</a>
         </div>
-
-      </div>
+        </div>
     </div>
     
     <!--End of pre-BLOGS-->
 
     <!--Modal pop up when user click on blog posts-->
     <div id="postModal" class="modal">
-      <div class="modal-content">
+      <div class="modal-content modalEdit">
         <img id="postImage" src="" alt="">
         <div id="postContent">
           <!--post title and text will load here-->
@@ -130,10 +127,23 @@
         <br>
         <div class="comment-section">
           <div class="like-comment-section">
-          <p><i class="bi bi-hand-thumbs-up"></i> Like</p>
-          <p><i class="bi bi-chat-dots"></i> Comment</p>
+          <p><i class="bi bi-chat-dots comment"></i> Comment</p>
           </div>
         <textarea class="form-control ml-1 shadow-none textarea"></textarea>
+        </div>
+        <div class="comment-section" data-comment-id="2345">
+          <h3>Comments</h3>
+          <div class="comments" id="commentList">
+            <div class="comment-area" id="comment-id-1">
+            <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
+            <p>awesome post, I think this will help alot.</p>
+            </div>
+            <div class="comment-area" id="comment-id-2">
+              <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
+              <p>cool!</p>
+            </div>
+            <!-- Comments will be dynamically added here server I will do the function to display just need the comments added to backend server and api route -->
+          </div>
         </div>
         <div class="modal-button">
           <button class="modal-comment-button" id="comment">Post comment</button>
@@ -145,6 +155,7 @@
   <!--ENd of Modal code-->
   <br>
   <br>
+
   <div class="videos-container">
     <h1>Tutorial Videos</h1>
     <div class="youtube-box">
@@ -152,11 +163,7 @@
 
       </div>
 
-
-
     </div>
-
-
     <br>
     <footer>
       <div class="footer-container">
