--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -52,9 +52,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-abigail.jpg" alt="a picture of Abigail">
-          <p>"Mauris nunc urna, dignissim ac dignissim ac, accumsan ac massa. Duis a dolor a purus tristique tempus.
-            Aenean dapibus justo vitae aliquet laoreet. Etiam porttitor viverra condimentum. Morbi elementum fringilla
-            diam, quis fringilla eros faucibus et."</p>
+          <p>"Ambitious Full stack developer student, I am Known for taking on challenges and expanding my skills and knowledge in many talents. Military retired brat, some college in business. I am hoping to become a freelance web developer or work for a good company in tech engineer! "</p>
         </div>
       </div>
       <div class="developer-position">
