--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -147,7 +147,7 @@
         </div>
         <div class="modal-button">
           <button class="modal-comment-button" id="comment">Post comment</button>
-        <button class="modal-close-button" id="close">Cancel</button>
+        <button class="modal-close-button close-button" id="close">Cancel</button>
         </div>
       </div>
     </div>
