--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -15,7 +15,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link rel="icon" type="image/x-icon" href="../images/favicon1.png">
-  <!--we can change color, leave feedback on favicon by url (blue hand at top)-->
   <link rel="stylesheet" type="text/css" href="../css/blog.css" />
   <script async src="../js/youtube.js"></script>
   <script defer type="module" src="../js/blog.js"></script>
@@ -73,7 +72,7 @@
         <div class="date-created">
           <p><i>John Doe posted</i> 5 September, 2023</p>
           <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
-          <a href="#" class="btn btn-primary">See post</a>
+          <a href="#" class="btn btn-primary modalSeePost">See post</a>
         </div>
       </div>
     </div>
@@ -94,7 +93,7 @@
           <a href="https://bootcamp.ce.ucf.edu/coding/">UCF Schedule</a>
           <p>12/11/23: Full-Time (12 weeks)</p>
           <p>10/10/23: Part-Time (24 weeks)</p>
-          <p><a href="#" class="btn btn-primary">See post</a></p>
+          <p><a href="#" class="btn btn-primary modalSeePost">See post</a></p>
         </div>
       </div>
     </div>
@@ -188,10 +187,6 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
-
 </body>
 
 </html>
