fixed bug in showing modal for new posts

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -72,7 +72,7 @@
         <div class="date-created">
           <p><i>John Doe posted</i> 5 September, 2023</p>
           <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
-          <a href="#" class="btn btn-primary modalSeePost">See post</a>
+          <a href="#" class="btn btn-primary">See post</a>
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
           <a href="https://bootcamp.ce.ucf.edu/coding/">UCF Schedule</a>
           <p>12/11/23: Full-Time (12 weeks)</p>
           <p>10/10/23: Part-Time (24 weeks)</p>
-          <p><a href="#" class="btn btn-primary modalSeePost">See post</a></p>
+          <p><a href="#" class="btn btn-primary">See post</a></p>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
         <div class="date-created">
           <p><i>Jack Doe posted</i> 1 October, 2023</p>
           <p class="card-text">"I thought this would help anyone learning MYSQL and building their own database/api's!"</p>
-          <a href="#" class="btn btn-primary modalSeePost">See post</a>
+          <a href="#" class="btn btn-primary">See post</a>
         </div>
         </div>
     </div>
