--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -146,7 +146,7 @@
         </div>
         <div class="modal-button">
           <button class="modal-comment-button" id="comment">Post comment</button>
-        <button class="modal-close-button close-button" id="close">Cancel</button>
+        <button class="modal-close-button close-button" id="close" data-dismiss="modal" aria-label="Close">Cancel</button>
         </div>
       </div>
     </div>
@@ -187,6 +187,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
