fixed close button on modal, another bud fixing

--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -69,7 +69,7 @@
         <div class="date-created">
           <p><i>John Doe posted</i> 5 September, 2023</p>
           <p class="card-text">"I feel like we are missing the script tag in our HTML."</p>
-          <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#postModal">See post</a>
+          <a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a>
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
           <a href="https://bootcamp.ce.ucf.edu/coding/">UCF Schedule</a>
           <p>12/11/23: Full-Time (12 weeks)</p>
           <p>10/10/23: Part-Time (24 weeks)</p>
-          <p><a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#postModal">See post</a></p>
+          <p><a href="#" class="btn btn-primary" id="seePost" data-bs-toggle="modal" data-bs-target="#postModal">See post</a></p>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
         </div>
         <div class="modal-button">
           <button class="modal-comment-button" id="comment" typ="submit">Post comment</button>
-        <button class="modal-close-button close-button" id="close" data-bs-dismiss="modal" aria-label="Close" onclick="close_modal();">Cancel</button>
+        <button class="modal-close-button close-button" id="close" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
         </div>
       </div>
     </div>
