--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -135,16 +135,15 @@
               <img src="../images/pre-profile-pic1.jpg" width="20" height="20">
               <p>cool!</p>
             </div>
-            <!-- Comments will be dynamically added here server I will do the function to display just need the comments added to backend server and api route -->
           </div>
         </div>
         <div class="modal-button">
-          <button class="modal-comment-button" id="comment" typ="submit">Post comment</button>
+          <button class="modal-comment-button" id="comment" type="submit">Post comment</button>
         <button class="modal-close-button close-button" id="close" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
         </div>
       </div>
     </div>
-  </div>
+  
   <!--ENd of Modal code-->
   <br>
   <br>
