--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -106,7 +106,7 @@
         </div>
         </div>
     </div>
-    
+    </div>
     <!--End of pre-BLOGS-->
 
     <!--Modal pop up when user click on blog posts-->
