--- a/public/html/blog.html
+++ b/public/html/blog.html
@@ -139,7 +139,7 @@
         </div>
         <div class="modal-button">
           <button class="modal-comment-button" id="comment" type="submit">Post comment</button>
-        <button class="modal-close-button close-button" id="close" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
+        <button class="modal-close-button close-button" id="close" data-dismiss="modal" aria-label="Close">Cancel</button>
         </div>
       </div>
     </div>
