--- a/public/html/teambio.html
+++ b/public/html/teambio.html
@@ -58,7 +58,7 @@
       <div class="developer-position">
         <div class="flex-container">
           <img class="about-developers" src="../images/about-katie.jpg" alt="a picture of Katie">
-          <p>"A Full Stack Web Developer in the making, with a passion for health, fitness, yoga, travel, and music. An aficionado of coffee & a dedicated matcha enthusiast."</p>
+          <p>"A Full Stack Web Developer in the making, with a passion for health, fitness, yoga, travel, and music."</p>
         </div>
       </div>
       <div class="developer-position">
