updating styling to resources

--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -77,6 +77,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
+  <script src="../js/stanley.js"></script>
 
 </body>
 </html>
