cleaning up resource code

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -90,14 +90,14 @@
 
 <div class="resources-app">
   
-  <h1> <span class="res" style="color: aqua ; font-size: 55px; letter-spacing: 3px; text-shadow: 4px 4px  #2d4848">RESOURCES</span> for programming <span class="fancy"><b>help</b></span> and <span class="fancy"><b>knowledge</b>!</span></h1><br/>
- 
+  <h1> <span class="res" style="font-size: 55px; letter-spacing: 3px; text-shadow: 4px 4px  #2d4848">RESOURCES</span> for programming <span class="fancy"><b>help</b></span> and <span class="fancy"><b>knowledge</b>!</span></h1>
+</div>
 
 
 <div class="Sbtn">
 <a class="btn btn-info tag-button" href="../html/stanley.html">Big Winner!</a>
 </div>
-</div>
+
 
 
     <div class="center">
