updating styling of resource page

--- a/public/html/stanley.html
+++ b/public/html/stanley.html
@@ -77,6 +77,8 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
     crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"> 
+    </script> 
   <script src="../js/stanley.js"></script>
 
 </body>
