--- a/public/html/about.html
+++ b/public/html/about.html
@@ -100,6 +100,9 @@
           alt="F2F fist to five logo" width="30" height="30"></p>
 
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"> 
+  </script> 
 </body>
 
 </html>
