--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -113,8 +113,8 @@
                        data-bs-interval="1750"> 
                       <h1 class="m-4 text-white"> 
                         Previously Recorded Video Content!</h1> 
-                      <img src= "../images/ucf.jpg" 
-                           alt="UCF LOGO"> 
+                      <a href="../html/stanley.html"><img src= "../images/ucf.jpg" 
+                           alt="UCF LOGO"></a>
                            <h4 class="mt-3"> 
                             Click the image to go to site!</h4>
                   </div> 
