updated resources link images

--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -112,35 +112,37 @@
                   <div class="carousel-item bg-dark active" 
                        data-bs-interval="1750"> 
                       <h1 class="m-4 text-white"> 
-                        Previously Recorded Video Content!</h1> 
-                      <a href="../html/stanley.html"><img src= "../images/ucf.jpg" 
-                           alt="UCF LOGO"></a>
+                        Previously Recorded Video Content</h1> 
+                      <div class="text-center"><a href="../html/stanley.html" target="_blank"><img src= "../images/ucf.jpg" 
+                           alt="UCF LOGO"></a></div>
                            <h4 class="mt-3"> 
                             Click the image to go to site!</h4>
                   </div> 
                  
+
 <!-- W3schools Link -->
                   <div class="carousel-item bg-dark" 
                   data-bs-interval="1750"> 
                       <h1 class="m-4 text-white text-center"> 
                       Study with W3Schools</h1> 
-                          <div class="text-center"> 
+                          <div class="text-center"><a href="https://www.w3schools.com/" target="_blank">
                           <img src= 
                           "../images/w3school.png"
-                              alt="W3Schools LOGO"> 
+                              alt="W3Schools LOGO"> </a>
                           </div> 
                       <h4 class="mt-3"> 
                       Click the image to go to site!</h4> 
                   </div> 
+
 
 <!-- Stackoverflow link -->
                   <div class="carousel-item bg-dark" 
                        data-bs-interval="1750"> 
                       <h1 class="m-4 text-white text-center"> 
                         Ask Stack Overflow</h1> 
-                      <div class="text-center"> 
+                      <div class="text-center"> <a href="https://stackoverflow.com/" target="_blank">
                           <img src= "../images/stack.png"
-                              alt="stackOverFlow Logo"> 
+                              alt="stackOverFlow Logo"> </a>
                       </div> 
                       <h4 class="mt-3"> 
                         Click the image to go to site!</h4> 
@@ -151,11 +153,11 @@
                   <div class="carousel-item bg-dark" 
                   data-bs-interval="1750"> 
                       <h1 class="m-4 text-white text-center"> 
-                      Node & NPM</h1> 
-                          <div class="text-center"> 
+                      Use a package with NPM </h1> 
+                          <div class="text-center"> <a href="https://www.npmjs.com/" target="_blank">
                           <img src= 
                           "../images/npm.png"
-                              alt="W3Schools LOGO"> 
+                              alt="NPM LOGO"> </a>
                           </div> 
                       <h4 class="mt-3"> 
                       Click the image to go to site!</h4> 
@@ -167,10 +169,10 @@
                   data-bs-interval="1750"> 
                       <h1 class="m-4 text-white text-center"> 
                       Learn with MDN</h1> 
-                          <div class="text-center"> 
+                          <div class="text-center"> <a href="https://developer.mozilla.org/en-US/" target="_blank">
                           <img src= 
                           "../images/mdn.png"
-                              alt="W3Schools LOGO"> 
+                              alt="MDN LOGO"> </a>
                           </div> 
                       <h4 class="mt-3"> 
                       Click the image to go to site!</h4> 
