--- a/public/html/resources.html
+++ b/public/html/resources.html
@@ -74,7 +74,7 @@
       <button class="btn btn-info tag-button" data-tag="c & c++">C & C++</button>
       <button class="btn btn-info tag-button" data-tag="c#">C#</button>
       <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
-      <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
+      <button class="btn btn-info tag-button" data-tag="sql">SQL</button>
       <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
       <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
       <button class="btn btn-info tag-button" data-tag="java">JAVA</button>
@@ -245,6 +245,11 @@
             <option value="python" id="python">PYTHON</option>
             <option value="c & c++" id="c">C & C++</option>
             <option value="c#" id="c#">C#</option>
+            <option value="java" id="java">JAVA</option>
+            <option value="sql" id="java">SQL</option>
+            <option value="java" id="java">JAVA</option>
+            <option value="java" id="java">JAVA</option>
+            <option value="java" id="java">JAVA</option>
             <option value="java" id="java">JAVA</option>
           </select>
         </div>
